zaakafhandelcomponent-169 6B.4.1 Handmatig afhandelen van een zaak - DEEL 1