@@ -7,7 +7,6 @@ package net.atos.zac.app.admin.converter;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import net.atos.client.zgw.ztc.model.Resultaattype;
 import net.atos.zac.app.admin.model.RESTZaakResultaattype;
@@ -17,7 +16,7 @@ public class RESTZaakResultaattypeConverter {
 
     public RESTZaakResultaattype convertToRest(final Resultaattype resultaattype) {
         final RESTZaakResultaattype restZaakResultaattype = new RESTZaakResultaattype();
-        restZaakResultaattype.id = UriUtil.uuidFromURI(resultaattype.getUrl()).toString();
+        restZaakResultaattype.id = UriUtil.uuidFromURI(resultaattype.getUrl());
         restZaakResultaattype.naam = resultaattype.getOmschrijving();
         return restZaakResultaattype;
     }
@@ -25,6 +24,6 @@ public class RESTZaakResultaattypeConverter {
     public List<RESTZaakResultaattype> convertToRest(Collection<Resultaattype> resultaattypes) {
         return resultaattypes.stream()
                 .map(this::convertToRest)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
